--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.5.17"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1"
     }
 }
